Addressing main img issue not covering the body.  Also adjusted the portfolio to start at the same spot on Dominiques's shirt for consistency.

--- a/css/dominique-7820d7.webflow.css
+++ b/css/dominique-7820d7.webflow.css
@@ -205,7 +205,7 @@ img {
 }
 
 .heading-4 {
-  margin: 273px 0px 60px;
+  margin: 480px 0px 60px;
   font-family: Sansita, sans-serif;
   color: #f5ce3e;
   font-size: 30px;
@@ -703,7 +703,7 @@ img {
   }
 
   .heading-4 {
-    margin-top: 392px;
+    margin-top: 428px;
     margin-bottom: 0px;
   }
 
@@ -956,7 +956,7 @@ img {
   }
 
   .heading-4 {
-    margin-top: 230px;
+    margin-top: 279px;
     margin-bottom: -37px;
     padding-top: 0px;
     font-size: 20px;
@@ -1226,7 +1226,7 @@ img {
   }
 
   .heading-4 {
-    margin-top: 153px;
+    margin-top: 187px;
     margin-bottom: -51px;
   }
 
